--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "file-loader": "^0.11.2",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "rimraf": "^2.6.2",
+    "stats-webpack-plugin": "^0.6.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "sw-precache-webpack-plugin": "^0.11.4",
