Run lighthouse tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,14 @@ jobs:
           name: Build application
           command: npm run build
 
+      - run:
+          name: Start local server
+          command: npm start
+          background: true
+
+      - run:
+          name: Run lighthouse tests
+          command: npm run check:perf
 
       # save cache
       - save_cache:
