--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "cross-env NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
+    "check:perf": "mkdir -p stats && lighthouse http://localhost:8080 --output json --perf --output-path ./stats/lighthouse.json"
   },
   "engines": {
     "node": ">=7.0",
@@ -40,6 +41,7 @@
     "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "lighthouse": "^2.5.0",
     "rimraf": "^2.6.2",
     "stats-webpack-plugin": "^0.6.1",
     "stylus": "^0.54.5",
